@@ -4,6 +4,9 @@ BuildingsPy Changelog
 Version 5.2.0, xxxx
 ^^^^^^^^^^^^^^^^^^^
 
+- In buildingspy/development/refactor.py, corrected moving images to avoid creating
+  a directory if the target directory already exists.
+  (https://github.com/lbl-srg/BuildingsPy/pull/548)
 - In buildingspy/development/validator.py, added method validateHyperlinks()
   that searches for broken hyperlinks.
   (https://github.com/lbl-srg/BuildingsPy/issues/544)
